Update and rename index (1).html to index.html
Aligned the lines and rename the file name.

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@ Navigation bar code here
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="#">ST.GRASSY SCHOOL</a>
+  <a class="navbar-brand" href="#">ST.MARY SCHOOL</a>
   </div>
 
   <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-<li><a href="#Campus life">Campus life</a></li>
-<li><a href="#Achievements">Achievements</a></li>
-<li><a href="#What’s New">What’s New</a></li><li>
-<li><a href="#Contact us">Contact us`</a></li>
+          <li><a href="#Campus life">Campus life</a></li>
+          <li><a href="#Achievements">Achievements</a></li>
+          <li><a href="#What’s New">What’s New</a></li><li>
+          <li><a href="#Contact us">Contact us`</a></li>
       </ul>
   </div>
   
